--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <p>
-      <a href="index.html">super trollllll</a>
+      <a href="https://nl0789.github.io/b2/index.html">super trollllll</a>
     </p>
   </body>
 </html>
