--- a/2.html
+++ b/2.html
@@ -2,6 +2,6 @@
 <html>
   <head>
     <title>2</title>
-    <meta http-equiv="refresh" content="5; URL=3">
+    <meta http-equiv="refresh" content="5; URL=3.html">
   </head>
 </html>
