--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>trollllllll</title>
-    <meta charset=UTF-8>
+    <meta http-equiv="refresh" content="5; URL=2.html">
   </head>
   <body>
     <p>
