--- a/index.html
+++ b/index.html
@@ -1,13 +1,8 @@
 <!DOCTYPE=html>
 <html>
   <head>
-    <title>trollllllll</title>
+    <title>1</title>
     <meta http-equiv="refresh" content="5; URL=2.html">
   </head>
-  <body>
-    <p>
-      <a href="https://nl0789.github.io/b2/index.html">super trollllll</a>
-    </p>
-  </body>
 </html>
       
